--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ With convenience and ease, GlaciArmour helps you save time and effort in your da
 			Contact JA Southern Alberta: info@jasouthalberta.org
 			</p>
 			<p>
-			Contact Josh Johal: JJohal@jasouthalberta.org
+			Contact Josh Johal (JA Coordinator): JJohal@jasouthalberta.org
 			</p>
 		</div>
 	</section>
