--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <HEAD>
 	<meta charset="UTF-8">
 	<title> GlaciArmour</title>
+	<link rel="shortcut icon+ href="pic.jpg">
 	<link rel="stylesheet" href="webstyle.css">
 </HEAD>
 <BODY>
