--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ With convenience and ease, GlaciArmour helps you save time and effort in your da
 				Contact Us
 			</h1>
 			<p>
+			Customer Support (HR): topriyalpatel@gmail.com
+			</p>
+			<p>
 			Company President contact information: hazem.eldelebshany@gmail.com
 			</p>
 			<p>
