--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@ With convenience and ease, GlaciArmour helps you save time and effort in your da
 				Contact Us
 			</h1>
 			<p>
-			Company President contact information: hazem.eldelebshany@gmail.com
+			Customer Support (HR): topriyalpatel@gmail.com
+			</p>
+			<p>
+			Company President: hazem.eldelebshany@gmail.com
 			</p>
 			<p>
 			Contact JA Southern Alberta: info@jasouthalberta.org
