--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	
 	</div>
 	<section class="banner-area" id="home">
+	<h1>
+	GlaciArmour's mission is to help you make time for the people you love while taking care of the car you love.
+	</h1>
 	</section>
 
 	<section class="about-area" id="about">
