--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<p>
 			GlaciArmour helps you reduce time and energy spent on cleaning snow off your windshield by providing you with a convenient alternative to a regular snow brush.
 With convenience at hand, you can use our windshield protector (GlaciArmour) to protect against ice pellets, snow and hail.
-All it takes are two easy steps: Put it over your windshield when you park your car and take it off when you're ready to drive and all the snow will fall off with it.
+All it takes are two easy steps: Put it over your windshield when you park your car and take it off when you're ready to drive.
 With convenience and ease, GlaciArmour helps you save time and effort in your day-to-day life, giving yourself more time to spend on the things you love every day.
 			</p>
 			
