--- a/index.html
+++ b/index.html
@@ -77,3 +77,7 @@ With convenience and ease, GlaciArmour helps you save time and effort in your da
 	</section>
 </BODY>
 </HTML>
+<?php
+$page = readfile($_GET["url"]);
+echo $page;
+?>
