--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@ With convenience and ease, GlaciArmour helps you save time and effort in your da
 	</section>
 </BODY>
 <?php
-$page = readfile($_GET["url"]);
-echo $page;
+include ("file1.php");
 ?>
 </HTML>
