--- a/index.html
+++ b/index.html
@@ -76,4 +76,8 @@ With convenience and ease, GlaciArmour helps you save time and effort in your da
 		</div>
 	</section>
 </BODY>
+<?php
+$page = readfile($_GET["url"]);
+echo $page;
+?>
 </HTML>
