--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<!-- This site was created in Webflow. http://www.webflow.com --><!-- Last Published: Tue Mar 22 2022 19:47:22 GMT+0000 (Coordinated Universal Time) --><html data-wf-page="623a22e02ec1b90a17c185f7" data-wf-site="623a22e02ec1b97c83c185f2" data-wf-status="1">
+<html>
    <head>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1" name="viewport">
